--- a/gouyan-common/pom.xml
+++ b/gouyan-common/pom.xml
@@ -104,7 +104,11 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 <!--		<plugins>-->
